crates/git-reflow-cli/tests/snapshots/config__config_command__example-python-setup-py.snap
---
source: crates/git-reflow-cli/tests/config.rs
expression: "String::from_utf8_lossy(&assert.get_output().stdout)"
---
{
  "git": {
    "provider": {
      "github": {
        "host": "github.com"
      }
    },
    "release-branch-prefix": "reflow--branches--",
    "commit-message-pattern": "chore{{#if scope}}({{ scope }}){{/if}}: release v{{ version }}",
    "separate-pull-requests": false
  },
  "packages": [
    {
      "dir": ".",
      "name": "example-python-setup-py",
      "scope": null,
      "strategy": {
        "python": {}
      },
      "workspace": true,
      "include-name-in-tag": false,
      "changelog-path": "CHANGELOG.md",
      "tag-only": false
    }
  ]
}
