crates/git-reflow-cli/tests/snapshots/config__config_command__example-rust-workspace.snap
---
source: crates/git-reflow-cli/tests/config.rs
expression: "String::from_utf8_lossy(&assert.get_output().stdout)"
---
{
  "git": {
    "provider": {
      "github": {
        "host": "github.com"
      }
    },
    "release-branch-prefix": "reflow--branches--",
    "commit-message-pattern": "chore{{#if scope}}({{ scope }}){{/if}}: release v{{ version }}",
    "separate-pull-requests": false
  },
  "packages": [
    {
      "dir": ".",
      "name": "example-rust-workspace",
      "scope": null,
      "strategy": {
        "rust": {}
      },
      "workspace": true,
      "include-name-in-tag": false,
      "changelog-path": "CHANGELOG.md",
      "tag-only": false
    },
    {
      "dir": "crates/example-api",
      "name": "example-api",
      "scope": "example-api",
      "strategy": {
        "rust": {}
      },
      "workspace": true,
      "include-name-in-tag": true,
      "changelog-path": "CHANGELOG.md",
      "tag-only": false
    },
    {
      "dir": "crates/example-cli",
      "name": "example-cli",
      "scope": "example-cli",
      "strategy": {
        "rust": {}
      },
      "workspace": true,
      "include-name-in-tag": true,
      "changelog-path": "CHANGELOG.md",
      "tag-only": false
    }
  ]
}
